force-app/main/default/objects/OpportunityLineItem/fields/AR__c.field-meta.xml
<CustomField>
    <fullName>AR__c</fullName>
    <description>Campo AR para el objeto de Producto de Oportunidad.</description>
    <label>AR</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>