force-app/main/default/objects/OpportunityLineItem/fields/DSALES_Duracion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Duracion__c</fullName>
    <formula>TEXT(QuoteLineItem.Vigencia_meses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DuraciónGEX</label>
    <type>Text</type>
</CustomField>