force-app/main/default/objects/OpportunityLineItem/fields/DSALES_Estatus__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Estatus__c</fullName>
    <description>Capo para indicar en que proceso se encuentra el producto que adquirió el cliente</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Devuelto</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Por entregar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>