force-app/main/default/objects/OpportunityLineItem/fields/DSALES_FolioCertificado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_FolioCertificado__c</fullName>
    <description>Muestra el folio del certificado</description>
    <label>Folio de Certificado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>