force-app/main/default/objects/OpportunityLineItem/fields/DSALES_Producto__c.field-meta.xml
<CustomField>
    <fullName>dsalesProducto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Artículos</label>
    <type>Checkbox</type>
</CustomField>