force-app/main/default/objects/OpportunityLineItem/fields/dsalesSubTipo__c.field-meta.xml
<CustomField>
    <fullName>dsalesSubTipo__c</fullName>
    <label>SubTipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantía Extendida</fullName>
                <default>true</default>
                <label>Garantía Extendida</label>
            </value>
            <value>
                <fullName>Armado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>